--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My Application</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_avctivity_descr_event">AvctivityDescrEvent</string>
-    <string name="textViewDescr">New Text</string>
+    <string name="main_app">Просмотр мероприятий</string>
+    <string name="action_settings">Настройки</string>
+    <string name="descr_activity">Описание мероприятия</string>
 
 </resources>
